--- a/bmr.html
+++ b/bmr.html
@@ -95,12 +95,14 @@ pre {
 
 <br>
 
+<!--  -->
+
 <div class="row">
 
     <div class="col-md-1"></div>
     <div class="col-md-10">
 
-<p>BMR (<b><i>B</i></b>ayesian <b><i>M</i></b>acroeconometrics in <b><i>R</i></b>) is an R interface to <a href="bmlib.html" target="_blank">BMLib</a>, a templated C++ library for estimating Bayesian Vector Autoregression (BVAR) and Dynamic Stochastic General Equilibrium (DSGE) models.</p>
+<p>BMR (<b><i>B</i></b>ayesian <b><i>M</i></b>acroeconometrics in <b><i>R</i></b>) is an R interface to <a href="bmlib.html" target="_blank">BM++</a>, a templated C++ library for estimating Bayesian Vector Autoregression (BVAR) and Dynamic Stochastic General Equilibrium (DSGE) models.</p>
 
 <hr>
 
