--- a/bmr_header.html
+++ b/bmr_header.html
@@ -2,7 +2,7 @@
     <div class="col-lg-12">
         <ol class="breadcrumb">
             <li><a href="https://www.kthohr.com">Home</a></li>
-            <li><a href="bmlib.html">BMLib</a></li>
+            <li><a href="bmlib.html">BM++</a></li>
             <li><a href="bmr.html">BMR</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">DSGE <b class="caret"></b></a>
