--- a/statslib_docs_bern.html
+++ b/statslib_docs_bern.html
@@ -116,7 +116,7 @@ pre {
 
 <h3 style="text-align: left;" id="intro"><strong style="font-size: 120%;">Introduction</strong></h3>
 
-<p>The density function (mass function) of the Bernoulli distribution:</p>
+<p>The density function of the Bernoulli distribution:</p>
 $$
     f(x; p) = p^x (1-p)^{1-x}
 $$
@@ -132,7 +132,7 @@ $$
 
 <h3 style="text-align: left;" id="density"><strong style="font-size: 120%;">Density</strong></h3>
 
-<hr>
+<br>
 
 <p><strong>Definition:</strong></p>
 <pre class="brush: cpp;"> 
@@ -147,16 +147,19 @@ T dbern(const uint_t x, const T prob_par, const bool log_form = false);
 
 <p><strong>Examples:</strong></p>
 <pre class="brush: cpp;"> 
-// standard input: Prob(X=1) = 0.6
-double dens_val = stats::dbern(1,0.6);
-double log_dens_val = stats::dbern(1,0.6,true);
+// parameters
+double prob_par = 0.6;
+
+// standard input
+double dens_val = stats::dbern(1,prob_par);
+double log_dens_val = stats::dbern(1,prob_par,true);
 
 // Armadillo input
 arma::mat X(10,1);
 X.fill(1);
 
-arma::mat dens_vals_mat = stats::dbern(X,0.6);
-arma::mat log_dens_vals_mat = stats::dbern(X,0.6,true);
+arma::mat dens_vals_mat = stats::dbern(X,prob_par);
+arma::mat log_dens_vals_mat = stats::dbern(X,prob_par,true);
 </pre>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -165,7 +168,7 @@ arma::mat log_dens_vals_mat = stats::dbern(X,0.6,true);
 
 <h3 style="text-align: left;" id="probability"><strong style="font-size: 120%;">Probability</strong></h3>
 
-<hr>
+<br>
 
 <p><strong>Definition:</strong></p>
 <pre class="brush: cpp;"> 
@@ -179,17 +182,20 @@ T pbern(const uint_t x, const T prob_par, const bool log_form = false);
 <hr>
 
 <p><strong>Examples:</strong></p>
-<pre class="brush: cpp;"> 
-// standard input: Prob(X=1) = 0.6
-double prob_val = stats::pbern(0,0.6);
-double log_prob_val = stats::pnorm(0,0.6,true);
+<pre class="brush: cpp;">
+// parameters
+double prob_par = 0.6;
+
+// standard input
+double prob_val = stats::pbern(0,prob_par);
+double log_prob_val = stats::pnorm(0,prob_par,true);
 
 // Armadillo input
 arma::mat X(10,1);
 X.fill(0);
 
-arma::mat prob_vals_mat = stats::pbern(X,0.6);
-arma::mat log_prob_vals_mat = stats::pbern(X,0.6,true);
+arma::mat prob_vals_mat = stats::pbern(X,prob_par);
+arma::mat log_prob_vals_mat = stats::pbern(X,prob_par,true);
 </pre>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -198,7 +204,7 @@ arma::mat log_prob_vals_mat = stats::pbern(X,0.6,true);
 
 <h3 style="text-align: left;" id="quantile"><strong style="font-size: 120%;">Quantile</strong></h3>
 
-<hr>
+<br>
 
 <p><strong>Definition:</strong></p>
 <pre class="brush: cpp;"> 
@@ -212,15 +218,18 @@ Tb qbern(const Ta p, const Ta prob_par);
 <hr>
 
 <p><strong>Examples:</strong></p>
-<pre class="brush: cpp;"> 
-// standard input: Prob(X=1) = 0.6
-double quant_val = stats::qbern(0.7,0.6);
+<pre class="brush: cpp;">
+// parameters
+double prob_par = 0.6;
+
+// standard input
+double quant_val = stats::qbern(0.7,prob_par);
 
 // Armadillo input
 arma::mat X(10,1);
 X.fill(0.7);
 
-arma::mat quant_vals_mat = stats::qbern(X,0.6);
+arma::mat quant_vals_mat = stats::qbern(X,prob_par);
 </pre>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -229,7 +238,7 @@ arma::mat quant_vals_mat = stats::qbern(X,0.6);
 
 <h3 style="text-align: left;" id="density"><strong style="font-size: 120%;">Random Sampling</strong></h3>
 
-<hr>
+<br>
 
 <p><strong>Definition:</strong></p>
 <pre class="brush: cpp;"> 
@@ -255,11 +264,14 @@ mT rbern(const uint_t n, const uint_t k, const eT prob_par);
 
 <p><strong>Examples:</strong></p>
 <pre class="brush: cpp;"> 
-// standard input: Prob(X=1) = 0.6
-double rand_val = stats::rbern(0.6);
+// parameters
+double prob_par = 0.6;
+
+// standard input
+double rand_val = stats::rbern(prob_par);
 
 // Armadillo output: 10 x 1 matrix
-arma::mat rbern_mat = stats::rbern&lt;arma::mat&gt;(10,1,0.6);
+arma::mat rand_mat = stats::rbern&lt;arma::mat&gt;(10,1,prob_par);
 </pre>
 
 <hr style="height:2px;border-width:0;background-color:black">
@@ -269,9 +281,6 @@ arma::mat rbern_mat = stats::rbern&lt;arma::mat&gt;(10,1,0.6);
     </div>
 
     <div id="myfooter"></div>
-
-    <!-- jQuery -->
-    <!--<script src="js/jquery.js"></script>-->
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
